--- a/PartyInvites/PartyInvites/Views/Home/RsvpForm.cshtml
+++ b/PartyInvites/PartyInvites/Views/Home/RsvpForm.cshtml
@@ -9,9 +9,12 @@
 <html>
 <head>
     <title>RsvpForm</title>
+    <link rel="Stylesheet" href="@Href("~/Content/Site.css")" type="text/css"/>
 </head>
 <body>
-    @using (Html.BeginForm()) { 
+    @using (Html.BeginForm()) {
+        @Html.ValidationSummary()
+         
         <p>Your name: @Html.TextBoxFor(x=> x.Name)</p>
         <p>Your email: @Html.TextBoxFor(x=>x.Email)</p>
         <p>Your phone: @Html.TextBoxFor(x=>x.Phone)</p>
