Paging is working now - started CSS too

--- a/SportsStore/SportsStore.WebUI/Views/Shared/_Layout.cshtml
+++ b/SportsStore/SportsStore.WebUI/Views/Shared/_Layout.cshtml
@@ -7,6 +7,18 @@
 </head>
 
 <body>
-    @RenderBody()
+    <div id="header">
+        <div class="title">
+            SPORTS STORE
+        </div>
+
+        <div id="categories">
+            I will have to put something useful here later
+        </div>
+
+        <div id="content">
+            @RenderBody()
+        </div>
+    </div>
 </body>
 </html>
