--- a/SportsStore/SportsStore.WebUI/Views/Product/List.cshtml
+++ b/SportsStore/SportsStore.WebUI/Views/Product/List.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<SportsStore.Domain.Entities.Product>
+﻿@model SportsStore.WebUI.Models.ProductsListViewModel
+
 
 @{
     ViewBag.Title = "Products";
@@ -6,9 +7,13 @@
 
 <h2>List</h2>
 
-@foreach (var p in Model)
+@foreach (var p in Model.Products)
 { 
     <div class = "item">
         <h3>@p.Name</h3> @p.Description <h4>@p.Price.ToString("c")</h4>
-    </div>
+    </div>    
 }
+
+<div class = "pager">
+    @Html.PageLinks(Model.PagingInfo, x=>Url.Action("List", new {Page = x}))
+</div>
