--- a/SportsStore/SportsStore.WebUI/Content/Site.css
+++ b/SportsStore/SportsStore.WebUI/Content/Site.css
@@ -79,6 +79,7 @@ textarea
 
 BODY { font-size: 50; font-family: Cambria, Georgia, "Times New Roman"; margin: 0; }
 
+
 DIV#header DIV.title, DIV.item H3, DIV.item H4, DIV.pager A {
 font: bold 1em "Arial Narrow", "Franklin Gothic Medium", Arial;
 }
@@ -91,10 +92,8 @@ DIV.item { border-top: 1px dotted gray; padding-top: .7em; margin-bottom: .7em; 
 DIV.item:first-child { border-top:none; padding-top: 0; }
 DIV.item H3 { font-size: 1.3em; margin: 0 0 .25em 0; }
 DIV.item H4 { font-size: 1.1em; margin:.4em 0 0 0; }
-DIV.pager { text-align:right; border-top: 2px solid silver;
-padding: .5em 0 0 0; margin-top: 1em; }
-DIV.pager A { font-size: 1.1em; color: #666; text-decoration: none;
-padding: 0 .4em 0 .4em; }
+DIV.pager { text-align:right; border-top: 2px solid silver; padding: .5em 0 0 0; margin-top: 1em; }
+DIV.pager A { font-size: 1.1em; color: #666; text-decoration: none; padding: 0 .4em 0 .4em; }
 DIV.pager A:hover { background-color: Silver; }
 DIV.pager A.selected { background-color: #353535; color: White; }
 
