--- a/SportsStore/SportsStore.WebUI/Views/Product/List.cshtml
+++ b/SportsStore/SportsStore.WebUI/Views/Product/List.cshtml
@@ -13,5 +13,5 @@
 }
 
 <div class = "pager">
-    @Html.PageLinks(Model.PagingInfo, x=>Url.Action("List", new {Page = x}))
+    @Html.PageLinks(Model.PagingInfo, x=>Url.Action("List", new {Page = x, category = Model.CurrentCategory}))
 </div>
