Created a basic Navigation Controller

--- a/SportsStore/SportsStore.WebUI/Views/Shared/_Layout.cshtml
+++ b/SportsStore/SportsStore.WebUI/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
         </div>
 
         <div id="categories">
-            I will have to put something useful here later
+            @{ Html.RenderAction("Menu", "Nav"); }
         </div>
 
         <div id="content">
