New shipping details entity, view and controller

--- a/SportsStore/SportsStore.WebUI/Views/Cart/Index.cshtml
+++ b/SportsStore/SportsStore.WebUI/Views/Cart/Index.cshtml
@@ -45,4 +45,7 @@
 
     <p align="center" class="actionButtons">
         <a href="@Model.ReturnUrl">Continue shopping</a>
+
+        @Html.ActionLink("Checkout Now", "Checkout")
     </p>
+
