--- a/SportsStore/SportsStore.WebUI/Views/Shared/_AdminLayout.cshtml
+++ b/SportsStore/SportsStore.WebUI/Views/Shared/_AdminLayout.cshtml
@@ -7,6 +7,13 @@
 </head>
 <body>
     <div>
+        @{
+            if(TempData["message"] != null)
+            {
+                <div class="Message">@TempData["message"]</div>
+            }  
+         }
+
         @RenderBody()
     </div>
 </body>
